--- a/tickets/css/teamlist.css
+++ b/tickets/css/teamlist.css
@@ -675,7 +675,7 @@ button, a {
     border-radius: 32px;
     padding: 32px 32px 0 32px;
     overflow: hidden;
-    height: 80%;
+    height: 35vw;
     display: flex;
     flex-direction: column;
 }
@@ -1249,6 +1249,8 @@ button, a {
 /*=============================================
     =              login              =
 =============================================*/
+
+
 
 
 /*=============================================
